add wxdiary
